--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -32,3 +32,21 @@
         width: 95%;
     }
 }
+
+@media(max-width: 720px) {
+    #section-listings {
+        padding-bottom: 30px;
+    }
+
+    #section-marketing {
+        padding-top: 30px;
+    }
+
+    .cards {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card {
+        margin: 25px;
+    }
+}
