--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -60,3 +60,43 @@
         font-size: 1.1rem;
     }
 }
+
+@media(max-width: 499px) {
+    nav {
+        flex-direction: column;
+    }
+
+    nav h1 {
+        margin-bottom: 15px;
+    }
+
+    #showcase .container div,
+    .showcase-small .container div {
+        position: absolute;
+        top: 30%;
+        width: inherit;
+    }
+    #showcase .container h1 {
+        font-size: 1.7rem;
+    }
+    
+    #section-listings .container {
+        width: 80%;
+    }
+
+    .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #section-links {
+        grid-template-columns: unset;
+        grid-template-rows: 1fr;
+        padding: 20px;
+    }
+
+    #section-links div {
+        padding: 0;
+        align-items: unset;
+        margin: unset;
+    }
+}
