--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -59,6 +59,10 @@
     #section-marketing .marketing-item p {
         font-size: 1.1rem;
     }
+
+    #section-links div a {
+        font-size: 1rem;
+    }
 }
 
 @media(max-width: 499px) {
@@ -121,5 +125,11 @@
 
     #section-marketing .marketing-item p {
         font-size: 1.0rem;
+    }
+}
+
+@media(max-width: 375px) {
+    .card {
+        margin: 20px 0;
     }
 }
