--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -39,6 +39,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px 16px;
+    position: relative;
+    overflow-x: hidden;
 }
 
 footer {
@@ -72,9 +74,21 @@ nav h1 {
 
 nav h1:hover {
     position: relative;
-    border-color: rgba(138, 86, 181, 0.4);
+    border-color: rgba(155, 146, 161, 0.4);
     opacity: 0.8;
     /* text-shadow: 1px 1px 3px #aaa; */
+}
+
+nav .toggle {
+    color: var(--color-primary);
+    position: absolute;
+    right: -2%;
+    top: 17px;
+    transition: 0.15s;
+}
+
+nav .toggle:hover {
+    opacity: 0.8;
 }
 
 nav a:hover {
