Added logic to 'css-base.js' to toggle the 'nav-menu' in for screens with 'max-width' of '375px' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -149,7 +149,7 @@
 
     nav .nav-menu .badge {
         padding: 8px;
-        border-top: 1px solid #666
+        border-top: 1px solid #666;
     }
 
     nav .nav-menu .badge:last-child {
