Fixed error regarding 'nav.toggle' showing on 'max-width' above '375 px' in 'queries.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -137,6 +137,10 @@
         line-height: unset;
     }
 
+    nav .toggle {
+        right: -2%;
+    }
+
     nav .nav-menu {
         /* https://stackoverflow.com/questions/3331353/transitions-on-the-css-display-property */
         display: flex;
