Changed default '.card' width in 'utilities.css' and added queries for 'index.html' for 'max-width: 1024px' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -27,6 +27,12 @@
     }
 }
 
+@media(max-width: 1024px) {
+    .card {
+        width: unset;
+    }
+}
+
 @media(max-width: 768px) {
     #section-listings .container {
         width: 95%;
