--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -109,6 +109,7 @@ button, .btn {
     position: relative;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
     transition: 0.3s;
+    width: 288px;
 }
 
 .card:hover, .card-sm:hover {
