--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -111,7 +111,7 @@ nav .nav-menu .badge li.selected a {
 /* Page - / */
 /* Showcase */
 #showcase {
-    background: url(../images/city_clipart.png) no-repeat center center;
+    background: url(../images/city_clipart.png) center center;
     filter: opacity(0.9);
     color: #fff;
     min-height: 450px;
