--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -37,9 +37,13 @@
 }
 
 @media(max-width: 1225px) {
-    #section-listings .container, #section-marketing .container {
+    .container {
         width: 90%;
     }
+
+    #showcase .container, .showcase-small .container {
+        width: 80%;
+    } 
     
     .card {
         margin: 20px 10px;
@@ -47,8 +51,12 @@
 }
 
 @media(max-width: 768px) {
-    #section-listings .container {
+    .container {
         width: 95%;
+    }
+
+    #showcase .container, .showcase-small .container {
+        width: 80%;
     }
 }
 
@@ -104,7 +112,12 @@
         font-size: 1.7rem;
     }
     
-    #section-listings .container {
+    .container {
+        width: 80%;
+    }
+
+    
+    #showcase .container, .showcase-small .container {
         width: 80%;
     }
 
