--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -119,7 +119,7 @@ nav .nav-menu .badge li.selected a {
 }
 
 .showcase-small {
-    background: url(../images/city_clipart.png) no-repeat center center;
+    background: url(../images/city_clipart.png) center center;
     filter: opacity(0.9);
     color: #fff;
     height: 200px;
