--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -321,6 +321,8 @@ nav .nav-menu .badge li.selected a {
 
 .info-name .name {
     flex: 9;
+    width: 10%;
+    word-wrap: break-word;
 }
 
 .info-name .info-actions {
