--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -468,7 +468,8 @@ select.btn-dropdown {
     margin-top: 12px;
 }
 
-.section-read.links .item .text-main {
+.section-read.links .item .text-main,
+.txt-triple-line {
     padding: 5px 0;
     overflow: hidden;
     text-overflow: ellipsis;
