--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -23,6 +23,19 @@
     }
 }
 
+@media(min-width: 1920px) {
+    .listing-units-grp,
+    .listing-nearby-places .places-list,
+    .listing-reviews .reviews-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card-sm, .card-sm .details .label {
+        font-size: 0.9rem;
+    }
+}
+
 @media(min-width: 1600px) {
     .cards {
         gap: 50px;
@@ -33,6 +46,11 @@
     .card {
         margin: auto;
         width: 356px;
+    }
+
+    .listing-info-aux {
+        width: 1240px;
+        margin: 20px auto;
     }
 }
 
