--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -85,7 +85,7 @@
 }
 
 @media(max-width: 941px) {
-    .section-listing-secondary .panel-grp {
+    .panel-grp, .section-unit-secondary .panel-grp {
         grid-template-columns: 1fr;
     }
 
@@ -110,6 +110,13 @@
         width: 80%;
     }
 
+    .section-unit-main .container {
+        width: 90%;
+    }
+
+    .section-unit-secondary .container {
+        width: 100%;
+    }
     
     .info-name .name {
         font-size: 1.6rem;
@@ -142,6 +149,12 @@
     .listing-info-aux .aux-grp:nth-child(2) {
         border-bottom: 1px solid var(--color-font);
     }
+
+    .section-unit-main .container .main-img .img:nth-child(2),
+    .section-unit-main .container .main-img .img:nth-child(3),
+    .section-unit-main .container .main-img .img:last-child {
+        height: 110px;
+    }
 }
 
 @media(max-width: 720px) {
@@ -165,6 +178,19 @@
     .listing-reviews .reviews-list {
         grid-template-columns: 1fr;
         padding: 0 20px;
+    }
+    
+    .section-unit-main .container {
+        grid-template-columns: 1fr;
+    }
+
+    .section-unit-main {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    .section-unit-secondary {
+        padding-top: 15px;
     }
 }
 
