Corrected error in 'queries.css' (max-width: 941px) affecting 'view-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -85,7 +85,9 @@
 }
 
 @media(max-width: 941px) {
-    .panel-grp, .section-unit-secondary .panel-grp {
+    .panel-grp,
+    .section-listing-secondarygit .panel-grp,
+    .section-unit-secondary .panel-grp {
         grid-template-columns: 1fr;
     }
 
