Added media queries for 'view-faqs.html' for all dimensions in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -312,6 +312,10 @@
     .section-listing-info-header {
         padding-top: 10px;
     }
+
+    .section-read {
+        padding-top: 10px;
+    }
 }
 
 @media(max-width: 408px) {
