--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -109,6 +109,16 @@ nav .nav-menu .badge li.selected a {
     color: var(--color-primary);
 }
 
+/* Filler */
+.filler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+}
+
 /* Nav drawer */
 .nav-drawer {
     display: flex;
@@ -121,15 +131,15 @@ nav .nav-menu .badge li.selected a {
     height: 100%;
     z-index: 10;
     padding: 7px 15px;
-    color: #fff;
+    color: var(--color-font-contrast);
     transition: 1s;
     overflow-y: auto;
 }
-/* 
+
 .nav-drawer.closed {
     position: fixed;
     right: -377px;
-} */
+}
 
 #navDrawerClose {
     position: absolute;
@@ -154,7 +164,7 @@ nav .nav-menu .badge li.selected a {
 
 .nav-drawer-category {
     padding: 12px 0 3px 0;
-    border-bottom: 1px solid var(--color-secondary);
+    border-bottom: 1px solid var(--color-tertiary);
 }
 
 .nav-drawer-category:last-child {
@@ -179,6 +189,11 @@ nav .nav-menu .badge li.selected a {
 
 .nav-drawer-category.apps ul div {
     width: 50%;
+}
+
+#navDrawerOpen {
+    cursor: pointer;
+    color: var(--color-font);
 }
 
 /* Page - / */
