Added additional HTML markup to 'view-listing-unit-occupied.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -508,3 +508,12 @@ select.btn-dropdown {
     display: inline-block;
     margin: 0 5px;
 }
+
+.sub-grp ul li {
+    list-style: square;
+    margin-left: 20px;
+}
+
+.sub-grp ul li > span {
+    font-weight: bold;
+}
