--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -13,11 +13,10 @@ button, .btn {
     font-family: inherit;
 }
 
-
-
 .btn-link {
     background: none;
     border: 1px solid var(--color-font);
+    margin: 3px;
 }
 
 /* Primary button */
