Made changes to initial markup of '/beginner/favourites.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -738,4 +738,4 @@ nav .nav-menu .badge li.selected a {
     padding: 8px 0 2px 0;
 }
 
-/* Page - /view-ticket-user */
+/* Page - /beginner/favourites */
