--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -739,15 +739,12 @@ nav .nav-menu .badge li.selected a {
 }
 
 /* Page - /beginner/favourites */
-#sectionBookmarks .container {
-    margin: auto;
-}
-
 .favourites-grp {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
+    justify-content: center;
 }
 
 .favourites-grp .fav {
@@ -784,7 +781,6 @@ nav .nav-menu .badge li.selected a {
 }
 
 .favourites-grp .fav .thumb {
-    width: 180px;
     height: 198px;
     background-size: cover;
     display: inline-block;
