Added 'waiting-list.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -58,6 +58,7 @@ footer {
 .container {
     width: var(--container-width-default);
     margin: auto;
+    /* max-width: 1540px; */
 }
 
 /* Navbar */
