--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -802,4 +802,8 @@ nav .nav-menu .badge li.selected a {
     margin: 8px;
 }
 
-/* Page - /beginner/property-history.html */
+/* Page - /beginner/view-my-review.html */
+#sectionMyReview.section-listing-reviews .review-item .info-rating-grp {
+    font-size: 1.3rem;
+    padding: 5px 0;
+}
