Added styling for '/beginner/my-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -802,7 +802,11 @@ nav .nav-menu .badge li.selected a {
     margin: 8px;
 }
 
-
+/* Page - /beginner/view-my-review.html */
+#sectionMyReviews.section-listing-reviews .review-item .link {
+    display: inline-block;
+    margin-top: 5px;
+}
 
 /* Page - /beginner/view-my-review.html */
 #sectionMyReview.section-listing-reviews .review-item .info-rating-grp {
